[gd_scene load_steps=4 format=3 uid="uid://bbnfswcvaxdbp"]

[ext_resource type="Script" uid="uid://dogp4m0kdsd3p" path="res://levels/battletest/dino_widget.gd" id="1_juvho"]
[ext_resource type="Texture2D" uid="uid://cnt0138ro8yt2" path="res://levels/battletest/dino_widget_bg.png" id="1_kjgug"]
[ext_resource type="Texture2D" uid="uid://c8imikwh2q8us" path="res://dinos/lystrosaurus/lystrosaurus.png" id="2_ookaa"]

[node name="DinoWidget" type="TextureRect"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -67.5
offset_right = 405.0
offset_bottom = 67.5
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("1_kjgug")
script = ExtResource("1_juvho")
_tween_trans = 11
_tween_duration = 0.2

[node name="RearPos" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 108.0
offset_top = 0.5
offset_right = -297.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="LeadPos" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 297.0
offset_top = 0.5
offset_right = -108.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(202.5, 67.5)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ookaa")
